--- a/Práctica 03/ejercicio 02/style04.css
+++ b/Práctica 03/ejercicio 02/style04.css
@@ -2,7 +2,7 @@
 #canvas{
     background: white;
     height:500px;
-    width:567px;
+    width:587px;
     border:0px solid #808080;
     
 }
@@ -14,6 +14,7 @@
     width:10px;
     float: left;
     border:1px solid #808080;
+    font-size: 4px; 
     
 }
 
