--- a/Práctica 03/ejercicio 02/style04.css
+++ b/Práctica 03/ejercicio 02/style04.css
@@ -1,9 +1,22 @@
+#container{
+    background: white;
+    height:800px;
+    width:807px;
+    border:0px solid black;
+    margin: 20px 0px 0px 20px;
+    padding: 20px 0px 0px 20px;
+    
+    
+}
+
+
+
 
 #canvas{
     background: white;
     height:500px;
     width:607px;
-    border:0px solid #808080;
+    border:0px solid green;
     
 }
 
@@ -18,11 +31,37 @@
     
 }
 
-.canvas_cell_gray{
-    	
-    background: gray;
-    height:10px;
-    width:10px;
-    float: left;
+
+#palette{
+    background: white;
+    height:100px;
+    width:500px;
+    border:0px solid blue;
     
+}
+
+#palette_colours{
+    margin: 10px 0px 0px 10px;
+    background: white;
+    height:40px;
+    width:400px;
+    border:0px solid #808080;
+    
+}
+
+
+#palette_label{
+    background: white;
+    border:0px solid #808080;
+    margin: 0px 0px 0px 10px;
+    
+}
+
+
+.palette_cell{
+    height:30px;
+    width:30px;
+    float: left;
+    background: #243356;
+    border:0px solid #808080;
 }
