--- a/Práctica 03/ejercicio 01/style03.css
+++ b/Práctica 03/ejercicio 01/style03.css
@@ -1,12 +1,13 @@
-/* CSS Document */
 
-
-table 	{
-	border-color:#400040;
-	border-style:solid;
-	background-color:#99F;
+#container{
+    background: white;
+    height:800px;
+    width:807px;
+    border:0px solid black;
+    margin: 120px 0px 0px 300px;       
 }
 
-td	{
-	font-weight:bold;
+table{
+    border:0px solid black;
+    background-color:Azure;	
 }
