--- a/Práctica 03/ejercicio 02/style04.css
+++ b/Práctica 03/ejercicio 02/style04.css
@@ -5,10 +5,8 @@
     border:0px solid black;
     margin: 20px 0px 0px 20px;
     padding: 20px 0px 0px 20px;
-    
-    
+     
 }
-
 
 
 
@@ -34,9 +32,10 @@
 
 #palette{
     background: white;
-    height:100px;
-    width:550px;
-    border:0px solid blue;
+    height:70px;
+    width:450px;
+    border:3px ridge;
+    margin: 0px 0px 10px 0px;
     
 }
 
@@ -44,7 +43,7 @@
     margin: 10px 0px 0px 10px;
     background: white;
     height:40px;
-    width:500px;
+    width:448x;
     border:0px solid #808080;
     
 }
