--- a/Practica_04/estilo05.css
+++ b/Practica_04/estilo05.css
@@ -1,5 +1,5 @@
 
-body.n {
+body.menu_item {
 	font-family: verdana,helvetica;
 	color: #000000;
 	background-color: #ad7ce5; 
@@ -20,168 +20,65 @@ body {
 	background-color: #f0e5f8;
 	font-size: 12px;
 }
-h1 {
-	font-family: verdana,helvetica;
-	font-size: 16px;
-	font-weight: bold;
-	color: #5a1784;
-}
-h2 {
-	font-family: verdana,helvetica;
-	font-size: 14px;
-	font-weight: bold;
-	color: #bb3902;
-}
-h3 {
-	font-family: verdana,helvetica;
-	font-size: 12px;
-	font-weight: bold;
-	color: #000000;
-}
+
 td {
 	font-family: verdana,helvetica;
 	color: #000000;
 	font-size: 12px;
 }
-a {
+
+.menu_item_td {
 	font-family: verdana,helvetica;
-	font-size: 12px;
+	background-color: #ad7ce5;
+	color: #ffffff;
+	font-size: 10px;
 }
+
+.menu_item_td_selected {
+	font-family: verdana,helvetica;
+	color: #ffffff;
+	font-weight: bold;
+	font-size: 10pt;
+}
+
+
 .white {
 	font-family: verdana,helvetica;
 	color: #ffffff;
 	font-weight: bold;
 	font-size: 12pt;
 }
-.tabval {
-	font-family: verdana,helvetica;
-	color: #000000;
-	background-color: #ffffff;
-	font-weight: plain;
-	font-size: 10pt;
-}
-.tabhead {
-	font-family: verdana,helvetica;
-	color: #ffffff;
-	font-weight: bold;
-	font-size: 10pt;
-}
-.nh {
-	font-family: verdana,helvetica;
-	color: #ffffff;
-	font-weight: bold;
-	font-size: 10pt;
-}
+
+
+
 p {
 	font-family: verdana,helvetica;
 	color: #000000;
 	font-size: 12px;
 }
-.navi {
+
+h1 {
 	font-family: verdana,helvetica;
-	background-color: #ad7ce5;
-	color: #ffffff;
-	font-size: 10px;
-}
-.small {
-	font-family: verdana,helvetica;
-	color: #db5902;
-	font-size: 10px;
+	font-size: 16px;
+	font-weight: bold;
+	color: #5a1784;
 }
 
-a.n:link:focus, a.n:visited:focus {-moz-outline:0px;}
-a.n:link { font-size: 10pt; color: #ffffff; font-weight:normal; text-decoration:none;}
-a.n:visited { font-size: 10pt; color: #ffffff; font-weight:normal; text-decoration:none;}
-a.n:active { font-size: 10pt; color: #ffffff; font-weight:normal; text-decoration:none;}
-a.n:hover { font-size: 10pt; background-color: #ffffff; color: #ad7ce4; font-weight:normal; text-decoration:none;}
+a {
+	font-family: verdana,helvetica;
+	font-size: 12px;
+}
+
+a.menu_item:link:focus, a.menu_item:visited:focus {-moz-outline:0px;}
+a.menu_item:link { font-size: 10pt; color: #ffffff; font-weight:normal; text-decoration:none;}
+a.menu_item:visited { font-size: 10pt; color: #ffffff; font-weight:normal; text-decoration:none;}
+a.menu_item:active { font-size: 10pt; color: #ffffff; font-weight:normal; text-decoration:none;}
+a.menu_item:hover { font-size: 10pt; background-color: #ffffff; color: #ad7ce4; font-weight:normal; text-decoration:none;}
 a.nh:link:focus, a.nh:visited:focus {-moz-outline:0px;}
-
-a.nh:link { font-size: 10pt; background-color: #ffffff; color: #ad7ce4; font-weight:normal; text-decoration:none;}
-a.nh:visited { font-size: 10pt; background-color: #ffffff; color: #ad7ce4; font-weight:normal; text-decoration:none;}
-a.nh:active { font-size: 10pt; background-color: #ffffff; color: #ad7ce4; font-weight:normal; text-decoration:none;}
-a.nh:hover { font-size: 10pt; background-color: #ffffff; color: #ad7ce4; font-weight:normal; text-decoration:none;}
 
 a:link { color: #4aa2e6; font-weight:normal; text-decoration:underline;}
 a:visited { color: #4aa2e6; font-weight:normal; text-decoration:underline;}
 a:active { color: #4aa2e6; font-weight:normal; text-decoration:underline;}
 a:hover { color: #4aa2e6; font-weight:normal; text-decoration:underline;}
 
-.h {
-	font-family: verdana,helvetica;
-	color: #f80a3c;
-	background-color: #ffffff;
-	font-size: 12px;
-}
-.d {
-	font-family: verdana,helvetica;
-	color: #ffffff;
-	background-color: #fb7922;
-	font-size: 12px;
-}
-.black {
-	font-family: verdana,helvetica;
-	color: #000000;
-	font-weight: normal;
-	font-size: 12px;
-}
-.blue {
-	font-family: verdana,helvetica;
-	color: #3c3c5c;
-	font-weight: normal;
-	font-size: 10px;
-	text-decoration: underline;
-}
-.big {
-	font-family: verdana,helvetica;
-	color: #000000;
-	background-color: #ffffff;
-	font-weight: bold;
-	font-size: 12px;
-}
 
-.red {
-	font-family: verdana,helvetica;
-	color: #ffffff;
-	background-color: #df0000;
-	font-weight: bold;
-	font-size: 10px;
-}
-.green {
-	font-family: verdana,helvetica;
-	color: #ffffff;
-	background-color: #00df00;
-	font-weight: bold;
-	font-size: 10px;
-}
-
-.yellow {
-	font-family: verdana,helvetica;
-	color: #ffffff;
-	background-color: #dfdf00;
-	font-weight: bold;
-	font-size: 10px;
-}
-
-#langsel {
-	font-family: Verdana;
-	font-size: 8px;
-	vertical-align: bottom;
-	padding-bottom: 1px;
-	padding-left: 10px;
-	padding-right: 10px;
-}
-
-#langsel div {
-	float: right;
-}
-
-#langsel a {
-	color: #000;	
-	text-decoration: none;
-	font-family: Verdana;
-	font-size: 10px;
-}
-
-#langsel a:hover {
-	text-decoration: underline;
-}
